syntax = "proto3";

message ComplexMessage {
    enum SimpleEnum {
        UNSPECIFIED = 0;
        VALUE_A = 1;
        VALUE_B = 2;
        VALUE_B1 = 3;
        VALUE_B2 = 4;
        VALUE_B3 = 5;
        VALUE_B4 = 6;
        VALUE_B5 = 7;
        VALUE_B6 = 8;
        VALUE_B7 = 9;
        VALUE_B8 = 1000;
    }

    message SimpleMessage {
        int32 some_field = 1;
        string some_field2 = 2;
    }

    SimpleEnum enum = 1;
    int32 scalar_int32 = 2;
    int64 scalar_int64 = 3;
    uint32 scalar_uint32 = 4;
    uint64 scalar_uint64 = 5;
    sint32 scalar_sint32 = 6;
    sint64 scalar_sint64 = 7;
    fixed32 scalar_fixed32 = 8;
    fixed64 scalar_fixed64 = 9;
    sfixed32 scalar_sfixed32 = 10;
    sfixed64 scalar_sfixed64 = 11;
    double scalar_double = 12;
    float scalar_float = 13;
    bool scalar_bool = 14;
    string scalar_string = 15;
    SimpleMessage message = 16;
    bytes bytes = 17;

    // Maps
    map<int32, SimpleEnum> map_enum = 18;
    map<int32, int32> map_scalar = 19;
    map<string, SimpleMessage> map_msg = 20;
    map<string, bytes> map_bytes = 21;
    map<string, string> map_string = 22;

    // Repeated
    repeated SimpleEnum r_enum = 23;
    repeated int32 r_scalar = 24;
    repeated SimpleMessage r_msg = 25;
    repeated bytes r_bytes = 26;
}